fix: MultiSelect overflow

--- a/src/components/ui/MultiSelect/MultiSelect.module.css
+++ b/src/components/ui/MultiSelect/MultiSelect.module.css
@@ -1,4 +1,7 @@
 .multiSelectValues {
     min-height: 30px;
-    height: 30px;
+}
+
+.multiSelectInput {
+    height: auto;
 }
